--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a id="get-nfts-link    " class="nav-link" href="#">
+            <a id="get-nfts-link" class="nav-link" href="#">
               <span data-feather="users"></span>
               NFTs
             </a>
@@ -87,7 +87,7 @@
 
       </div>
       <h2>NFTs</h2>
-      <div id="tableofnfts" class="table-responsive">
+      <div id="tableofnfts" class="table-responsive d-flex flex-wrap">
           
       </div>
     </main>
